# Agentic-Enterprise-Knowledge-Copilot

./: .env.example  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml  tests.yml
docs/: architecture.md  deterministic-workflow.md  domain-contracts.md  project-overview-zh.md
docs/adr/: ADR-001-package-and-layer-boundary.md  README.md
docs/design/: business_scope.md  design_baseline.md  design_review.md  domain_model.md  state_machine.md  tool_contract.md  walkthrough.md
docs/superpowers/plans/: 2026-07-19-mcp-scaffold-and-guidance.md
docs/superpowers/specs/: 2026-07-19-mcp-dual-role-design.md
evaluation/: __init__.py  run_eval.py  smoke_eval.py
evaluation/datasets/: smoke_v1.json
scripts/: __init__.py  check_architecture.py  check_docs.py  run_task.py
src/copilot/: __init__.py  config.py
src/copilot/api/: app.py
src/copilot/bootstrap/: __init__.py  cli.py  container.py
src/copilot/cli/: __init__.py  main.py
src/copilot/contracts/: __init__.py  approvals.py  artifacts.py  base.py  enums.py  errors.py  evidence.py  plans.py  tasks.py  tools.py  validators.py
src/copilot/evidence/: ledger.py
src/copilot/persistence/: artifact_repository.py  audit_repository.py  (+2 more)
src/enterprise_copilot/: __init__.py  config.py
tests/: __init__.py  workflow_helpers.py
tests/contract/: test_health_contract.py
tests/integration/: test_health.py  test_supplier_quality_workflow.py
tests/mocks/: __init__.py  mock_tools.py
tests/smoke/: test_cli.py  test_quality_gates.py
tests/unit/: test_artifact_repository.py  test_config.py
(+43 files in other folders)
